--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body ng-app="myApp">
 <section>
-    <fieldset ng-controller="contactCtrl">
+    <fieldset>
         <legend>Contact</legend>
         <add-contact></add-contact>
     </fieldset>
 
-    <fieldset ng-controller="listCtrl">
+    <fieldset>
         <legend>List</legend>
         <contact-list></contact-list>
         <btn-group></btn-group>
